--- a/gataka.html
+++ b/gataka.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Git</title>
+  <link rel="stylesheet" href="gataka2.css">
 </head>
 <body>
   <h1> Git урок </h1>
